--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,15 @@
     <string name="add_btn">Add</string>
     <string name="delete_btn">Delete</string>
     <string name="clear_btn">Clear</string>
+    <string name="description">Description</string>
+    <string name="task_title">Task Title</string>
+    <string name="done">Done</string>
+    <string name="priority">Priority</string>
+    <string name="creation_date">Creation date</string>
+    <string name="due_date">Due date</string>
+    <string-array name="spinner_choices">
+        <item>LOW</item>
+        <item>MEDIUM</item>
+        <item>HIGH</item>
+    </string-array>
 </resources>
